--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,7 @@ header {
   flex-wrap: wrap;
 }
 
-#btn0, #btn1, #btn2, #btn3 {
+#choice0, #choice1, #choice2, #choice3 {
   flex-shrink: 0;
   width: 250px;
   background: darkorange;
@@ -65,7 +65,7 @@ header {
   padding: 10px;
 }
 
-#btn0:hover, #btn1:hover, #btn2:hover, #btn3:hover {
+#choice0:hover, #choice1:hover, #choice2:hover, #choice3:hover {
   cursor: pointer;
   background: lightgrey
 }
